src/objects/IT_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Any_general_comments__c</fullName>
        <label>Any general comments</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Best_service__c</fullName>
        <description>Who in IT provides the best customer service and why?</description>
        <label>Best service</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_understanding_improvement__c</fullName>
        <description>Has the business understanding from IT improved since June of this year?</description>
        <label>Business understanding improvement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_raised_a_case_with_IT__c</fullName>
        <description>Have you raise a case with IT in the last 3 months?</description>
        <label>Have you raised a case with IT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_priority_for_2014__c</fullName>
        <description>In your view, where should the IT budget be spent in 2015</description>
        <label>Key priority for 2014</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New IT equipment</fullName>
                </value>
                <value>
                    <fullName>Faster internet connection</fullName>
                </value>
                <value>
                    <fullName>Faster applications (such as the speed of EBS)</fullName>
                </value>
                <value>
                    <fullName>Enhancing existing systems</fullName>
                </value>
                <value>
                    <fullName>Replacing existing systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_of_automation_with_IBB_systems__c</fullName>
        <inlineHelpText>Where 10 is extremely satisfied and 1 is extremely dissatisfied.</inlineHelpText>
        <label>Level of automation with IBB systems</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>TEXT(CreatedBy.Branch__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Satisfaction_with_IT__c</fullName>
        <inlineHelpText>Where 10 is extremely satisfied and 1 is extremely dissatisfied.</inlineHelpText>
        <label>Overall Satisfaction with IT</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Raise_a_case__c</fullName>
        <description>How do you usually raise a case with the IT Servicedesk?</description>
        <label>Raise a case</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Face to face</fullName>
                </value>
                <value>
                    <fullName>Over the phone</fullName>
                </value>
                <value>
                    <fullName>Through Salesforce</fullName>
                </value>
                <value>
                    <fullName>By email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_improvement__c</fullName>
        <description>Has the resolution time to your IT case improved since June of this year?</description>
        <label>Resolution improvement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_satisfaction__c</fullName>
        <description>On a scale of 1 to 10 where 10 is very satisfied and 1 is very dissatisfied, how satisfied are you with the time taken to resolve your IT case?</description>
        <label>Resolution satisfaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_improvement__c</fullName>
        <description>Has the response time to your IT case improved since June of this year?</description>
        <label>Response improvement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_satisfaction__c</fullName>
        <description>On a scale of 1 to 10 where 10 is very satisfied and 1 is very dissatisfied, how satisfied are you with the time taken to respond to your IT case?</description>
        <label>Response satisfaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Satisfaction_with_IBB_s_IT_kit__c</fullName>
        <inlineHelpText>This includes items such as desktops, printers etc.
Where 10 is extremely satisfied and 1 is extremely dissatisfied.</inlineHelpText>
        <label>Satisfaction with IBB&apos;s IT kit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Satisfaction_with_IBB_s_systems__c</fullName>
        <inlineHelpText>This includes all of IBB&apos;s systems such as EBS, Salesforce etc. 
Where 10 is extremely satisfied and 1 is extremely dissatisfied.</inlineHelpText>
        <label>Satisfaction with day 2 day applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_taken_to_resolve_Ncritical_issues__c</fullName>
        <inlineHelpText>Where 10 is extremely satisfied and 1 is extremely dissatisfied.</inlineHelpText>
        <label>Time taken to resolve noncritical issues</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_taken_to_resolve_critical_issues__c</fullName>
        <inlineHelpText>Where 10 is extremely satisfied and 1 is extremely dissatisfied.</inlineHelpText>
        <label>Time taken to resolve critical issues</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Understand_business_needs__c</fullName>
        <inlineHelpText>Where 10 is extremely satisfied and 1 is extremely dissatisfied.</inlineHelpText>
        <label>Level of business understanding</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>IT Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ITS{0000}</displayFormat>
        <label>IT Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>